# fast-shortener

./: Cargo.toml  LICENSE  README.md
src/: handlers.rs  main.rs  routes.rs  state.rs
